[gd_scene load_steps=7 format=3 uid="uid://ejrrjhngecu0"]

[ext_resource type="Script" path="res://minigames/counting/num_line_10_to_100/num_line_10_to_100.gd" id="1_01n0q"]
[ext_resource type="Texture2D" uid="uid://dmkyjs3vpa0ij" path="res://minigames/counting/make_amounts_1_to_999/assets/background.svg" id="2_22ho6"]
[ext_resource type="Texture2D" uid="uid://cio5l1dydn7b1" path="res://minigames/counting/num_line_0_to_9/assets/bar.svg" id="2_iku36"]
[ext_resource type="Script" path="res://minigames/counting/num_line_10_to_100/number_line.gd" id="2_iv4fx"]
[ext_resource type="Texture2D" uid="uid://cffejba4v58fm" path="res://minigames/counting/num_line_0_to_9/assets/tick.svg" id="3_05dym"]
[ext_resource type="Texture2D" uid="uid://driu627b5hxvg" path="res://minigames/counting/num_line_10_to_100/assets/roll.svg" id="5_c8fbh"]

[node name="num_line_10_to_100" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_01n0q")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_22ho6")
centered = false

[node name="NumberLine" type="Node2D" parent="."]
script = ExtResource("2_iv4fx")

[node name="Bar" type="Sprite2D" parent="NumberLine"]
visible = false
texture = ExtResource("2_iku36")
centered = false

[node name="Zero" type="Sprite2D" parent="NumberLine"]
texture = ExtResource("3_05dym")
centered = false

[node name="RollFwdButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1565.0
offset_top = 913.0
offset_right = 1666.0
offset_bottom = 964.0
texture_normal = ExtResource("5_c8fbh")

[node name="RollBckwdButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1383.0
offset_top = 915.0
offset_right = 1484.0
offset_bottom = 966.0
texture_normal = ExtResource("5_c8fbh")
flip_h = true
